Fix overlapping menu on mobile; closes #1559

--- a/galette/webroot/themes/default/galette.css
+++ b/galette/webroot/themes/default/galette.css
@@ -2331,6 +2331,12 @@ meter[value="4"]::-moz-meter-bar { background: green ; }
         /* same as #content margin-left */
         transform: translateX(17em);
     }
+    #menu {
+        display: none;
+    }
+    body:target #menu {
+        display: block;
+    }
     .nav-button-close,
     body:target .nav-button-open {
         display: none;
